<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgottenpassword.ChangePasswordActivity">

    <TextView
        android:id="@+id/lbl_change_password_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Token"
        app:layout_constraintStart_toStartOf="@+id/lbl_change_password_instructions"
        app:layout_constraintTop_toBottomOf="@+id/lbl_change_password_instructions" />

    <TextView
        android:id="@+id/lbl_change_password_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enter_password"
        app:layout_constraintStart_toStartOf="@+id/lbl_change_password_token"
        app:layout_constraintTop_toBottomOf="@+id/txt_change_password_token" />

    <TextView
        android:id="@+id/lbl_change_password_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_password"
        app:layout_constraintStart_toStartOf="@+id/lbl_change_password_password"
        app:layout_constraintTop_toBottomOf="@+id/txt_change_password_password" />

    <TextView
        android:id="@+id/lbl_change_password_instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:text="@string/lbl_change_password_instructions"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_change_password_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_your_password_here"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txt_change_password_token"
        app:layout_constraintStart_toStartOf="@+id/lbl_change_password_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/lbl_change_password_confirm_password"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"/>

    <EditText
        android:id="@+id/txt_change_password_token"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_token_here"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/lbl_change_password_instructions"
        app:layout_constraintStart_toStartOf="@+id/lbl_change_password_token"
        app:layout_constraintTop_toBottomOf="@+id/lbl_change_password_token"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"/>

    <EditText
        android:id="@+id/txt_change_password_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_password_here"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txt_change_password_token"
        app:layout_constraintStart_toStartOf="@+id/lbl_change_password_password"
        app:layout_constraintTop_toBottomOf="@+id/lbl_change_password_password"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"/>

    <Button
        android:id="@+id/btn_change_password_accept"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_change_password_cancel"
        app:layout_constraintTop_toBottomOf="@+id/txt_change_password_confirm_password" />

    <Button
        android:id="@+id/btn_change_password_cancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_change_password_accept"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_change_password_confirm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>